Fix too large viewport  on smaller screens

--- a/src/components/Layout/Layout.css
+++ b/src/components/Layout/Layout.css
@@ -1,8 +1,11 @@
 .Layout {
+  width: 100vw;
   height: 100%;
   display: grid;
   grid-template-columns: auto 1fr;
   grid-template-rows: 1fr;
+  position: relative;
+  overflow: hidden;
 }
 
 @media screen and (max-width: 900px) {
